@@ -1,3 +1,9 @@
+2009-08-01  Donal K. Fellows  <dkf@users.sf.net>
+
+	* unix/tkUnixWm.c (WmIconphotoCmd): [Bug 2830420]: Assemble the image
+	for the window manager in a way that doesn't assume we're on a little-
+	endian system.
+
 2009-07-22  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tkFocus.c (TkFocusDeadWindow): [Bug 2496114]: Ensure that
